chore: Dockerfile usando executável native + pom